--- a/Homepage.html
+++ b/Homepage.html
@@ -10,7 +10,7 @@
           <a href='#'> Contact </a>
           </nav>
         
-        <p> This is the first paragraph for Learning Git Homepage. </p>
+        <p> This is the first paragraph for Learning Git Homepage </p>
         
   </body>
 </html>
